<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data/>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/index_bg">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="120dp"
            tools:ignore="NotSibling">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/icon_nfc_write_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nfc_write_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textSize="25dp"
                />

            <TextView
                android:id="@+id/instructions_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:gravity="center"
                android:textColor="@color/instructions_color"
                android:textStyle="normal"
                android:text="@string/nfc_write_instructions_one"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/instructions_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:gravity="center"
                android:textColor="@color/instructions_color"
                android:textStyle="normal"
                android:text="@string/nfc_write_instructions_two"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/searching"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/nfc_write_cancel"
                android:textSize="20dp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/searching"
            android:layout_width="500dp"
            android:layout_height="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/btn_searching"
            android:layout_marginBottom="50dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/icon_searching"
                android:layout_width="20dp"
                android:layout_height="20dp">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/nfc_write_searching"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>