<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data/>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.ResetActivity"
        android:background="@color/index_bg">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="120dp">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/icon_reset_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:textSize="30dp"/>

            <TextView
                android:id="@+id/instructions_one"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/instructions_color"
                android:textStyle="normal"
                android:text="@string/reset_instructions_one"
                android:layout_marginTop="20dp"/>


            <TextView
                android:id="@+id/instructions_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/instructions_color"
                android:text="@string/reset_instructions_two"
                android:textStyle="normal"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/instructions_three"
                android:layout_width="420dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/instructions_color"
                android:text="@string/reset_instructions_two"
                android:textStyle="normal"
                android:layout_marginTop="20dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_reset"
            android:layout_width="500dp"
            android:layout_height="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/btn_reset"
            android:layout_marginBottom="50dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/btn_reset_text"
                android:text="@string/reset_btn_text"
                android:textSize="20dp"
                android:textStyle="bold"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>